Tell users to see server log when error occurs in refresh.
This fix just clarifies an error message.

--- a/syncdb/src/message.properties
+++ b/syncdb/src/message.properties
@@ -5,6 +5,7 @@ error.command=command error
 error.argument=argument error
 error.full=full refresh only
 error.refreshquery=refresh query error
+error.refresh=refresh error, see server logs for details
 error.no_subscription={0} has no subscription
 error.no_subscriber=not found subscriber id {0}
 error.mlog_notfound={0} table not found
